--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -9,13 +9,15 @@
          height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
-            background-position: center top;
+            background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+            
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 700px;
             padding: 10px;
             margin: auto;
             border-radius: 15px;
@@ -26,6 +28,9 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus dolor impedit deleniti vel voluptates ipsum quia autem doloremque voluptatibus, saepe cum fuga, eaque eligendi error sapiente sed natus porro minus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo odit placeat saepe! Quo quasi adipisci voluptatum, doloremque tenetur porro amet voluptatem delectus, ipsam tempora autem repellendus laborum id rerum iste? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga quas quam nobis tempora aliquid, maiores, ipsa blanditiis adipisci amet, ducimus ea iusto error aut animi excepturi deleniti rerum alias voluptates?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus dolor impedit deleniti vel voluptates ipsum quia autem doloremque voluptatibus, saepe cum fuga, eaque eligendi error sapiente sed natus porro minus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo odit placeat saepe! Quo quasi adipisci voluptatum, doloremque tenetur porro amet voluptatem delectus, ipsam tempora autem repellendus laborum id rerum iste? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga quas quam nobis tempora aliquid, maiores, ipsa blanditiis adipisci amet, ducimus ea iusto error aut animi excepturi deleniti rerum alias voluptates?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus dolor impedit deleniti vel voluptates ipsum quia autem doloremque voluptatibus, saepe cum fuga, eaque eligendi error sapiente sed natus porro minus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo odit placeat saepe! Quo quasi adipisci voluptatum, doloremque tenetur porro amet voluptatem delectus, ipsam tempora autem repellendus laborum id rerum iste? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga quas quam nobis tempora aliquid, maiores, ipsa blanditiis adipisci amet, ducimus ea iusto error aut animi excepturi deleniti rerum alias voluptates?</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus dolor impedit deleniti vel voluptates ipsum quia autem doloremque voluptatibus, saepe cum fuga, eaque eligendi error sapiente sed natus porro minus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo odit placeat saepe! Quo quasi adipisci voluptatum, doloremque tenetur porro amet voluptatem delectus, ipsam tempora autem repellendus laborum id rerum iste? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga quas quam nobis tempora aliquid, maiores, ipsa blanditiis adipisci amet, ducimus ea iusto error aut animi excepturi deleniti rerum alias voluptates?</p>
     </main>
 </body>
