--- a/exercicios/projeto social/index.html
+++ b/exercicios/projeto social/index.html
@@ -14,8 +14,8 @@
 <iframe name="tela" id="tela" src="home.html" frameborder="0"></iframe>
       </section>
       <section id="rede">
-      <a target="tela" href=""><img src="imagens/logo-home.jpg" alt=""></a><br>
-      <a target="tela" href=""><img src="imagens/logo-youtube.jpg" alt=""></a><br>
+      <a target="tela" href="home.html"><img src="imagens/logo-home.jpg" alt=""></a><br>
+      <a target="tela" href="yotube.html"><img src="imagens/logo-youtube.jpg" alt=""></a><br>
       <a target="tela" href=""><img src="imagens/logo-twitter.jpg" alt=""></a><br>
       <a target="tela" href=""><img src="imagens/logo-github.jpg" alt=""></a><br>
       <a target="tela" href=""><img src="imagens/logo-instagram.jpg" alt=""></a><br>
